--- a/src/components/MovieRow.css
+++ b/src/components/MovieRow.css
@@ -34,3 +34,33 @@
     /* back to be 100% when you pass the mouse over the img */
     transform: scale(1);
 }
+
+.movieRow--left,
+.movieRow--right {
+    position: absolute;
+    width: 40px;
+    height: 225px;
+    z-index: 99;
+    display: flex;
+    background-color: rgba(0, 0, 0, 0.6);
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    /* Dont alow the oversize of the icon broke the page and add a horizontal scrollbar */
+    overflow: hidden;
+    opacity: 0;
+    transition: all ease .5s;
+}
+
+.movieRow--left {
+    left: 0;
+}
+
+.movieRow--right {
+    right: 0;
+}
+
+.movieRow:hover .movieRow--left,
+.movieRow:hover .movieRow--right{
+    opacity: 1;
+}
